# Socket_DSP

./: README.md
WSL_DSP_Server/: CMakeLists.txt  dsp_server.cpp
Windows_Audio_Client/: CMakeLists.txt  RtAudio.cpp  RtAudio.h  audio_client.cpp
